Fix horizontal scroll

--- a/components/illustration/index.css
+++ b/components/illustration/index.css
@@ -7,6 +7,8 @@
 }
 
 .Illustration {
+  width: 100%;
+  overflow: hidden;
   position: relative;
   z-index: 0;
 }
